# privacyguard-ops

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.lock.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: estructura-carpetas.md  git-commands.md
manifests/: brokers_manifest.yaml
src/pgo/: cli.py  manifest.py  models.py  state.py
src/pgo/core/: __init__.py  audit.py  db.py  errors.py  logging.py  paths.py  repository.py  settings.py  state.py
src/pgo/modules/: __init__.py  pii_guard.py  vault.py
tests/unit/: test_audit.py  test_db.py  test_errors.py  test_hmac.py  test_manifest.py  test_paths.py  test_pii_guard.py  test_repository.py  test_settings.py  test_state.py  test_state_smoke.py  test_vault.py  test_vault_invariants.py  test_zt_repository.py
