[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "privacyguard-ops"
version = "0.1.0"
description = "Local-first audit tool with append-only event log and tamper-evident chain."
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
pgo = "pgo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pgo*"]
