[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "privacyguard-ops"
version = "0.1.0"
description = "Local-first audit tool with append-only event log and tamper-evident chain."
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "structlog>=24.1.0",
  "pyyaml>=6.0.1",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "pip-audit>=2.7.0",
  "pre-commit>=3.7.0",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
pgo = "pgo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pgo*"]
